--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	</head>
 
 	<body>
-		<div class="piano-button"></div>
-		<div class="piano-button"></div>
-		<div class="piano-button"></div>
+		<div class="piano" id="piano">
+			<div class="piano-button"></div>
+			<div class="piano-button"></div>
+			<div class="piano-button"></div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 
